<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:id="@+id/exo_controls_background"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <FrameLayout
        android:layout_gravity="top"
        android:id="@+id/exo_center_controls"
        android:background="@android:color/transparent"
        android:paddingTop="@dimen/px15"
        android:paddingBottom="@dimen/px15"
        android:clipToPadding="false"
        android:descendantFocusability="afterDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/px30"
        android:paddingEnd="@dimen/px30"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:id="@+id/exo_bottom_bar"
        android:background="@drawable/focus_background"
        android:paddingBottom="@dimen/px30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:paddingStart="@dimen/px30"
        android:paddingEnd="@dimen/px30">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:id="@+id/view_title"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="@dimen/px25"
            android:paddingRight="@dimen/px25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/px25"
            android:paddingEnd="@dimen/px25"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:textSize="@dimen/px40"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:ellipsize="marquee"
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:shadowColor="@color/black"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textSize="@dimen/px28"
                android:textColor="@color/textColor"
                android:ellipsize="marquee"
                android:id="@+id/text_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px5"
                android:singleLine="true"
                android:shadowColor="@color/black"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                app:layout_constraintTop_toBottomOf="@+id/text_title"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <com.tutu.myblbl.feature.player.view.DefaultTimeBar
            android:id="@+id/exo_progress"
            android:nextFocusDown="@+id/button_play"
            android:nextFocusUp="@id/exo_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px5"
            app:layout_constraintTop_toBottomOf="@+id/view_title"
            app:scrubber_dragged_size="23dp"
            app:scrubber_focus_peak_size="30dp"
            app:scrubber_enabled_size="16dp"
            app:scrubber_drawable="@drawable/ic_progress_head"
            app:played_color="#FF0088BB"/>
        <FrameLayout
            android:id="@+id/view_bottom_controller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exo_progress">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/exo_basic_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_play"
                    android:background="@drawable/cell_background"
                    android:padding="14dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_play"
                    android:contentDescription="@string/play_pause">
                    <requestFocus/>
                </com.tutu.myblbl.feature.player.view.PlayerControlButton>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_refresh"
                    android:background="@drawable/cell_background"
                    android:padding="11dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_refresh"
                    android:visibility="gone"
                    android:contentDescription="@string/refresh"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_previous"
                    android:background="@drawable/cell_background"
                    android:padding="14dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_previous"
                    android:contentDescription="@string/previous_ep"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_next"
                    android:background="@drawable/cell_background"
                    android:padding="14dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_next"
                    android:contentDescription="@string/next_ep"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_rewind"
                    android:background="@drawable/cell_background"
                    android:padding="5dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_rewind"
                    android:contentDescription="@string/rewind"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_fast_forward"
                    android:background="@drawable/cell_background"
                    android:padding="5dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_fast_forward"
                    android:contentDescription="@string/fast_forward"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_dm_switch"
                    android:background="@drawable/cell_background"
                    android:padding="8dp"
                    android:focusable="true"
                    android:visibility="visible"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_dm_enable"
                    android:contentDescription="@string/dm_switch"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/exo_settings"
                    android:background="@drawable/cell_background"
                    android:padding="10dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_player_setting"
                    android:contentDescription="@string/setting"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_choose_episode"
                    android:background="@drawable/cell_background"
                    android:padding="15dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_list"
                    android:contentDescription="@string/choose_episode"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_more"
                    android:background="@drawable/cell_background"
                    android:padding="10dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_more"
                    android:contentDescription="@string/more"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_up_info"
                    android:background="@drawable/cell_background"
                    android:padding="13dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_user"
                    android:contentDescription="@string/up_info"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_subtitle"
                    android:background="@drawable/cell_background"
                    android:padding="11dp"
                    android:focusable="true"
                    android:visibility="gone"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_subtitles"
                    android:contentDescription="@string/subtitle"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_related"
                    android:background="@drawable/cell_background"
                    android:padding="10dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/arrow_down"
                    android:contentDescription="@string/related_video"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_repeat"
                    android:background="@drawable/cell_background"
                    android:padding="11dp"
                    android:focusable="true"
                    android:visibility="visible"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_order_all_play"
                    android:contentDescription="@string/play_order"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_live_settings"
                    android:background="@drawable/cell_background"
                    android:padding="11dp"
                    android:focusable="true"
                    android:visibility="gone"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_setting"
                    android:contentDescription="@string/live_quality"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/button_close"
                    android:background="@drawable/cell_background"
                    android:padding="11dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_close"
                    android:contentDescription="@string/close"
                    android:visibility="gone"/>
                <com.tutu.myblbl.feature.player.view.PlayerControlButton
                    android:id="@+id/exo_overflow_show"
                    android:background="@drawable/cell_background"
                    android:padding="10dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:visibility="gone"
                    android:nextFocusUp="@id/exo_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_more"
                    android:contentDescription="@string/exo_controls_overflow_show_description"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <HorizontalScrollView
                android:id="@+id/exo_extra_controls_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:visibility="gone"
                android:clickable="false"
                android:focusable="false"
                android:importantForAccessibility="no">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/exo_extra_controls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <com.tutu.myblbl.feature.player.view.PlayerControlButton
                        android:id="@+id/exo_overflow_hide"
                        android:background="@drawable/cell_background"
                        android:padding="@dimen/px22"
                        android:focusable="true"
                        android:clickable="true"
                        android:nextFocusUp="@id/exo_progress"
                        android:layout_width="@dimen/px100"
                        android:layout_height="@dimen/px100"
                        android:src="@drawable/ic_close"
                        android:contentDescription="@string/exo_controls_overflow_hide_description"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </HorizontalScrollView>
            <TextView
                android:id="@+id/text_live_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/px20"
                android:textSize="@dimen/px35"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowRadius="3"
                android:visibility="gone"
                android:focusable="false"
                android:clickable="false"/>
        </FrameLayout>
        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/exo_time"
            app:layout_constraintEnd_toStartOf="@+id/exo_time"
            app:layout_constraintTop_toTopOf="@+id/exo_time"
            style="?android:attr/progressBarStyleSmall"/>
        <LinearLayout
            android:id="@+id/exo_time"
            android:paddingLeft="@dimen/px10"
            android:paddingRight="@dimen/px10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:paddingStart="@dimen/px10"
            android:paddingEnd="@dimen/px10"
            app:layout_constraintBottom_toBottomOf="@+id/view_bottom_controller"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_bottom_controller">
            <TextView
                android:textSize="@dimen/px35"
                android:id="@+id/exo_position"
                style="@style/ExoStyledControls.TimeText.Position"/>
            <TextView
                android:textSize="@dimen/px35"
                style="@style/ExoStyledControls.TimeText.Separator"/>
            <TextView
                android:textSize="@dimen/px35"
                android:id="@+id/exo_duration"
                style="@style/ExoStyledControls.TimeText.Duration"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>
